vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/struct-no-repr.stderr
error: `H5Type` requires repr(C), repr(packed) or repr(transparent) for structs
 --> tests/compile-fail/struct-no-repr.rs:6:8
  |
6 | struct Foo {
  |        ^^^
